# hackathon-chatbot-starter

./: README.md  polytope.yml
api/: pyproject.toml
api/src/api/: main.py  routes.py
api/src/api/clients/: postgres.py
frontend/: README.md  index.html  package.json  tailwind.config.ts
frontend/public/: index.html
frontend/src/: config.ts  index.tsx
frontend/src/components/: Main.tsx
