[project]
name = "api"
version = "0.1.0"
description = "API service for the stack"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.0",
    "opperai==1.1.1",
    "uvicorn==0.35.0",
    "uuid==1.30",
    "psycopg[binary]==3.2.9",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
